Fix Invert Selection to behave in a bit more sane way

If possible, we shouldn't change the default pixel of the selection,
since it "breaks" selectedExactRect() easily.

BUG:457820